--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -8,7 +8,7 @@ description: Cohort Parameters Editor
 author: Pablo Madril based on Daniel Klco work
 
 # The URL of your actual domain. This will be used to make absolute links in the RSS feed.
-url: https://github.com/pmadril/pmadril.github.io
+url: https://pmadril.github.io/CohortEx/docs/
 
 # Exclude system files
 exclude: [.gitignore]
