--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -14,6 +14,9 @@ url: https://pmadril.github.io/CohortEx/
 exclude: [.gitignore]
 
 markdown: kramdown
+kramdown:
+  entity_output: numeric
+
 permalink: /blog/:year/:month/:day/:title
 
 collections:
