--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -15,7 +15,7 @@ exclude: [.gitignore]
 
 markdown: kramdown
 kramdown:
-  entity_output: as_input
+  smart_quotes: ["apos", "apos", "quot", "quot"]
 
 permalink: /blog/:year/:month/:day/:title
 
