- Trying to get auth back

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,5 +1,7 @@
 # Name of your site
 name: CohortEx Editor
+auth_short_name: Tereza
+auth_long_name: Maria Tereza F. Abrahão
 
 # Short description
 description: Cohort Parameters Editor
