- Test if Jekyll process _editors/stevDefault.json to configure correctly rte: document_base_url

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -14,6 +14,7 @@ url: https://pmadril.github.io/CohortEx/
 
 # Exclude system files
 exclude: [.gitignore]
+include = ['_editors']
 
 markdown: kramdown
 kramdown:
