- Change post author

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -7,7 +7,7 @@ auth_long_name: Maria Tereza F. Abrahão
 description: Cohort Parameters Editor
 
 # Your name, as you want it to appear underneath each post and in the footer
-author: Pablo Madril based on Daniel Klco work
+author: Maria Tereza F. Abrahão
 
 # The URL of your actual domain. This will be used to make absolute links in the RSS feed.
 url: https://pmadril.github.io/CohortEx/
